[package]
name = "polyswarm-relay"
version = "1.0.0"
authors = ["PolySwarm Developers <info@polyswarm.io>"]

[dependencies]
base64 = "0.9.3"
clap = "2.31"
config = "0.8"
ctrlc = "3.1"
failure = "0.1.2"
failure_derive = "0.1.2"
jsonrpc-core = "8.0.1"
log = "0.4.5"
parking_lot = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
ethabi = "6.1.0"
tiny-keccak = "1.4.2"
actix = "0.7.9"
actix-web = "0.7.18"
rlp = { version = "0.3.0", features = ["ethereum"] }
ethcore-transaction = { git = "https://github.com/paritytech/parity-ethereum" }
ethstore = { git = "https://github.com/paritytech/parity-ethereum" }
ethkey = { git = "https://github.com/paritytech/parity-ethereum" }
web3 = { git = "https://github.com/polyswarm/rust-web3", branch = "relay" }
consul = { git = "https://github.com/polyswarm/consul-rust", branch = "master" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
