[package]
name = "polyswarm-relay"
version = "1.0.0"
authors = ["PolySwarm Developers <info@polyswarm.io>"]

[dependencies]
actix = "0.7.9"
actix-web = "0.7.19"
base64 = "0.9.3"
clap = "2.31"
config = "0.8"
ctrlc = "3.1"
ethabi = "6.1.0"
failure = "0.1.2"
failure_derive = "0.1.2"
jsonrpc-core = "8.0.1"
log = "0.4.5"
lru = "0.1.15"
parking_lot = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tiny-keccak = "1.4.2"
tokio-core = "0.1"
openssl = "0.10.23"
rlp = { version = "0.3.0", features = ["ethereum"] }
ethcore-transaction = { git = "https://github.com/paritytech/parity-ethereum", rev="1a2fc03083c89e8a60ae55f54b85521fd0ec1389" }
ethstore = { git = "https://github.com/paritytech/parity-ethereum", rev="1a2fc03083c89e8a60ae55f54b85521fd0ec1389" }
ethkey = { git = "https://github.com/paritytech/parity-ethereum", rev="1a2fc03083c89e8a60ae55f54b85521fd0ec1389" }
web3 = { git = "https://github.com/polyswarm/rust-web3", branch = "relay" }
consul = { git = "https://github.com/polyswarm/consul-rust", branch = "master" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
