[package]
name = "polyswarm-relay"
version = "1.2.0"
authors = ["PolySwarm Developers <info@polyswarm.io>"]
edition = "2018"

[dependencies]
actix-web = "1.0.7"
base64 = "0.9.3"
clap = "2.31"
config = "0.8"
ctrlc = "3.1"
ethabi = "9.0.1"
failure = "0.1.2"
failure_derive = "0.1.2"
hex-literal = "0.2.1"
jsonrpc-core = "14.0.0"
log = "0.4.5"
lru = "0.1.15"
parking_lot = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tiny-keccak = "1.5.0"
tokio-core = "0.1.17"
tokio = "0.1.22"
rlp ="0.4.0"
common-types = { git = "https://github.com/paritytech/parity-ethereum" }
ethstore = { git = "https://github.com/paritytech/parity-ethereum" }
ethkey = { git = "https://github.com/paritytech/parity-ethereum" }
web3 = { git = "https://github.com/polyswarm/rust-web3", branch = "master" }
consul = { git = "https://github.com/polyswarm/consul-rust", branch = "master" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
